--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
     depends_on:
       - mongo
       - redis
+      - messengerApi
     environment:
       - ENV=${ENV:-test}
       - MONGO_HOST=mongo
